@@ -1,4 +1,5 @@
 Sigil 0.6.0 TBA
+    - Implement issue 1511: Prompt to replace an image when adding an image that already exists in the book.
     - Implement issue 1542: Add a Go to Style option to jump to the CSS class used by a tag.
     - Implement issue 1541: Heading styles should optionally remove/keep attributes in tags.
     - Implement issue 1540: Add option to tokenise spaces and numbers in F&R find text.
